--- a/connororton.html
+++ b/connororton.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
         <p class="navbar-brand mb-0 text-white">
-          <i class="fa d-inline fa-lg fa-stop-circle"></i>Fine Chap Games</p>
+          <i class="fa d-inline fa-lg fa-stop-circle"></i> BRAND </p>
       </button>
       <div class="collapse navbar-collapse" id="navbar14">
         <ul class="navbar-nav mr-auto">
@@ -35,18 +35,18 @@
       </div>
       <div class="row">
         <div class="px-md-5 flex-column d-flex justify-content-center" style="">
-          <h1 class="text-center"><b>Connor Orton BSc</b></h1>
+          <h1 class="mt-3 text-center"><b>Connor Orton BSc</b></h1>
           <h3 class="text-center"><b>Game Designer &amp; Programmer</b></h3>
-          <p class="lead text-center mx-3 mb-3">I am a passionate and dedicated aspiring video game developer who specializes in programming and design. I have had an interest in games production since an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to play. I have experience with most game engines and industry standard production techniques including programming, 2D &amp; 3D art and animation, audio design and more. Find my CV and portfolio on this page and contact me using the contact form if you are interested in hiring me.</p>
-          <div class="row px-2">
-            <div class="col-md-4"><a class="btn text-white d-flex btn-lg align-items-start justify-content-center btn-block my-2" href="https://www.facebook.com/connor.orton/" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
+          <p class="mb-3 lead text-center">I am a passionate and dedicated aspiring video game developer who specializes in programming and design. I have had an interest in games production since an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to play. I have experience with most game engines and industry standard production techniques including programming, 2D &amp; 3D art and animation, audio design and more. Find my CV and portfolio on this page and contact me using the contact form if you are interested in hiring me.</p>
+          <div class="row">
+            <div class="col-md-4"><a class="btn text-white my-2 mx-auto btn-lg d-flex justify-content-center" href="https://www.facebook.com/connor.orton/" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
             <div class="col-md-4"><a class="btn text-white my-2 mx-auto btn-lg d-flex justify-content-center" href="https://www.linkedin.com/in/connororton/" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
             <div class="col-md-4"><a class="btn text-white my-2 mx-auto d-flex justify-content-center btn-lg" href="https://twitter.com/ConnorOrton" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
           </div>
-          <div class="row px-2">
-            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="https://github.com/connor1994">Github Portfolio</a></div>
-            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a></div>
-            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
+          <div class="row">
+            <div class="col-md-4"><a class="btn btn-primary btn-block btn-lg" href="https://github.com/connor1994">Github Portfolio (C# Projects)</a></div>
+            <div class="col-md-4"><a class="btn btn-primary btn-block btn-lg" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
+            <div class="col-md-4"><a class="btn btn-primary btn-block btn-lg mb-3" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a></div>
           </div>
         </div>
       </div>
@@ -55,14 +55,14 @@
   <div class="mt-3 pb-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="p-md-5 d-flex flex-column justify-content-center align-items-center col-lg-12">
-          <h1 class="pt-3 text-center">Pixel Pinball Arcade - 2020 (Unity, C#)</h1>
-          <p class="mx-auto">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. I developed this game in a team of two which included myself and a 2D artist. This was my second project working in a team of two.<br><br><b>My responsibilities were:&nbsp;<br></b>- Designing the game concept, gameplay systems and menus&nbsp;<br>- Asset workflow management - Source control management&nbsp;<br>- Engine asset &amp; scene implementation&nbsp;<br>- Writing game system, menu and gameplay scripts&nbsp;<br>- Audio development&nbsp;<br>- Exporting and uploading to the play store</p><a class="btn btn-success btn-block btn-lg" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>Download Pixel Pinball Arcade</a>
+        <div class="p-md-5 align-items-center d-flex col-lg-12 flex-column text-left justify-content-center">
+          <h1 class="pt-3 text-center"><b>Pixel Pinball Arcade - 2020 (Unity, C#)</b></h1>
+          <p class="mb-0">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. I developed this game in a team of two which included myself and a 2D artist. This was my second project working in a team of two.<br><br><b>My responsibilities were:&nbsp;<br></b>- Designing the game concept, gameplay systems and menus&nbsp;<br>- Asset workflow management - Source control management&nbsp;<br>- Engine asset &amp; scene implementation&nbsp;<br>- Writing game system, menu and gameplay scripts&nbsp;<br>- Audio development&nbsp;<br>- Exporting and uploading to the play store</p><a class="btn btn-success my-3 w-25" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB">Pixel Pinball Arcade</a>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12 pb-3">
-          <div class="embed-responsive embed-responsive-16by9 pt-3">
+          <div class="embed-responsive embed-responsive-16by9 pt-4" style="">
             <video src="assets/Portfolio/Shared/PPA/Pixel Pinball Arcade.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
           </div>
@@ -80,7 +80,7 @@
       </div>
       <div class="row">
         <div class="col-md-12 pb-3">
-          <div class="embed-responsive embed-responsive-16by9 pt-3">
+          <div class="embed-responsive embed-responsive-16by9 pt-4">
             <video src="assets/Portfolio/Connor/Battle Beasts - RPG Mechanics Asset Pack - Trailer.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
           </div>
@@ -98,7 +98,7 @@
       </div>
       <div class="row">
         <div class="col-md-12 pb-3">
-          <div class="embed-responsive embed-responsive-16by9 pt-3">
+          <div class="embed-responsive embed-responsive-16by9 pt-4">
             <video src="assets/Portfolio/Connor/Survival Training Vr.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
           </div>
@@ -116,7 +116,7 @@
       </div>
       <div class="row">
         <div class="col-md-12 pb-3">
-          <div class="embed-responsive embed-responsive-16by9 pt-3">
+          <div class="embed-responsive embed-responsive-16by9 pt-4">
             <video src="assets/Portfolio/Connor/Isolation Complex - Gameplay.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
           </div>
@@ -134,7 +134,7 @@
       </div>
       <div class="row">
         <div class="col-md-12 pb-3">
-          <div class="embed-responsive embed-responsive-16by9 pt-3">
+          <div class="embed-responsive embed-responsive-16by9 pt-4">
             <video src="assets/Portfolio/Connor/Once Upon a Castle - Gameplay.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
           </div>
@@ -152,7 +152,7 @@
       </div>
       <div class="row">
         <div class="col-md-12 pb-3">
-          <div class="embed-responsive embed-responsive-16by9 pt-3">
+          <div class="embed-responsive embed-responsive-16by9 pt-4">
             <video src="assets/Portfolio/Connor/Dash and Stack.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
           </div>
@@ -170,7 +170,7 @@
       </div>
       <div class="row">
         <div class="col-md-12 pb-3">
-          <div class="embed-responsive embed-responsive-16by9 mt-3">
+          <div class="embed-responsive embed-responsive-16by9 pt-4">
             <video src="assets/Portfolio/Connor/I Am Alone.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
           </div>
@@ -188,7 +188,7 @@
       </div>
       <div class="row">
         <div class="col-md-12 pb-3">
-          <div class="embed-responsive embed-responsive-16by9 mt-3">
+          <div class="embed-responsive embed-responsive-16by9 mt-4">
             <video src="assets/Portfolio/Connor/Operation Health.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
           </div>
@@ -216,6 +216,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" style=""></script>
+  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
 </body>
 
 </html>
