--- a/connororton.html
+++ b/connororton.html
@@ -36,7 +36,7 @@
       <div class="row">
         <div class="px-md-5 flex-column d-flex justify-content-center" style="">
           <h1 class="text-center"><b>Connor Orton BSc</b></h1>
-          <h3 class="text-center"><b>Game Designer &amp; Programmer</b></h3>
+          <h3 class="text-center"><b>Game Programmer &amp; Designer</b></h3>
           <p class="lead text-center mx-3 mb-3">I am a passionate and dedicated aspiring video game developer who specializes in programming and design. I have had an interest in games production since an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to play. I have experience with most game engines and industry standard production techniques including programming, 2D &amp; 3D art and animation, audio design and more. Find my CV and portfolio on this page and contact me using the contact form if you are interested in hiring me.</p>
           <div class="row px-2">
             <div class="col-md-4"><a class="btn text-white d-flex btn-lg align-items-start justify-content-center btn-block my-2" href="https://www.facebook.com/connor.orton/" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
