--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -6,15 +6,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
-  <title>Natalie Smith (Portfolio)</title>
-  <meta name="description" content="Welcome to the portfolio page of Natalie Smith.">
-  <meta name="keywords" content="Natalie Smith 2D Art Portfolio">
+  <title>Fine Chap Games - Connor Orton</title>
+  <meta name="description" content="Welcome to the portfolio of Connor Orton">
+  <meta name="keywords" content="Connor Orton Indie Game Development Portfolio">
 </head>
 
-<body style="	background-image: url(&quot;assets/FCG_Wallpaper.jpg&quot;);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+<body style="	background-image: url(assets/FineChapGames/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
+        <p class="navbar-brand mb-0 text-white">
+          <i class="fa d-inline fa-lg fa-stop-circle"></i>Fine Chap Games</p>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar14">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active"> <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a> </li>
+        </ul>
+        <img class="img-fluid d-block" src="assets/FineChapGames/Logo_ZoomedOut_NoBG.png" width="50">
+        <p class="d-none d-md-block lead mb-0  text-white">Fine Chap Games</p>
+      </div>
+    </div>
+  </nav>
+  <div class="mt-3" style="">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
+      <div class="row">
+        <div class="col-md-12"><img class="d-block img-fluid d-flex justify-content-center mx-auto my-3 border-dark border" src="assets/Portrait/Natalie_Smith.jpg" height="300" width="300
+400
+50"></div>
+      </div>
+      <div class="row">
+        <div class="px-md-5 flex-column d-flex justify-content-center" style="">
+          <h1 class="text-center"><b>Natalie Smith</b></h1>
+          <h3 class="text-center"><b>Digital Artist</b></h3>
+          <p class="lead text-center mx-3 mb-3">I am a highly motivated and dedicated video game developer whose passions include games programming and design. My interest in games production started at an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to play. I have experience with most industry standard game engines and production software. I can read and write in a variety of different programming languages which I've taught myself and I've always had the desire to learn and improve on my skill set. Find my CV and portfolio below that I've developed over the years in my free time and at university.</p>
+          <div class="row px-2">
+            <div class="col-md-4"><a class="btn text-white d-flex btn-lg align-items-start justify-content-center btn-block my-2" href="https://www.facebook.com/FoxieDJ410" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
+            <div class="col-md-4"><a class="btn text-white my-2 mx-auto btn-lg d-flex justify-content-center" href="https://www.linkedin.com/in/natalie-smith-25940221b/" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
+            <div class="col-md-4"><a class="btn text-white my-2 mx-auto d-flex justify-content-center btn-lg" href="https://twitter.com/foxydj12" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
+          </div>
+          <div class="row px-2">
+            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="https://github.com/connor1994">Deviant Art Portfolio<br></a></div>
+            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
+            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" style=""></script>
 </body>
 
 </html>
