--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -37,16 +37,16 @@
         <div class="px-md-5 flex-column d-flex justify-content-center" style="">
           <h1 class="text-center"><b>Natalie Smith</b></h1>
           <h3 class="text-center"><b>Digital Artist</b></h3>
-          <p class="lead text-center mx-3 mb-3">I am a highly motivated and dedicated video game developer whose passions include games programming and design. My interest in games production started at an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to play. I have experience with most industry standard game engines and production software. I can read and write in a variety of different programming languages which I've taught myself and I've always had the desire to learn and improve on my skill set. Find my CV and portfolio below that I've developed over the years in my free time and at university.</p>
+          <p class="lead text-center mx-3 mb-3">Welcome to my portfolio page. I am a passionate, imaginative and&nbsp;conscientious digital artist and arts and crafts creator. I've always been a creative person my whole life and I want to be employed doing what I love by creating my art passions. I create digital art using the most popular industry standard software and hardware. I enjoy sketching on my graphics tablets often and creating a variety of different 2D artwork ranging from pixel art to seeing line art to completion. I also have knitting and sewing skills alongside non-digital artwork experience and I have plans to sell my creations online. Find my CV and portfolio below.<br></p>
           <div class="row px-2">
             <div class="col-md-4"><a class="btn text-white d-flex btn-lg align-items-start justify-content-center btn-block my-2" href="https://www.facebook.com/FoxieDJ410" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
             <div class="col-md-4"><a class="btn text-white my-2 mx-auto btn-lg d-flex justify-content-center" href="https://www.linkedin.com/in/natalie-smith-25940221b/" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
-            <div class="col-md-4"><a class="btn text-white my-2 mx-auto d-flex justify-content-center btn-lg" href="https://twitter.com/foxydj12" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
+            <div class="col-md-4"><a class="btn text-white my-2 mx-auto d-flex justify-content-center btn-lg" href="https://twitter.com/missnatsmith19" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
           </div>
           <div class="row px-2">
-            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="https://github.com/connor1994">Deviant Art Portfolio<br></a></div>
-            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
-            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a></div>
+            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="https://www.deviantart.com/foxydj">Deviant Art Portfolio<br></a></div>
+            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
+            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="https://www.instagram.com/natsmithcrafts/"><i class="fa fa-fw fa-instagram"></i>Knitting &amp; Crafts Portfolio</a></div>
           </div>
         </div>
       </div>
