--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="row" style="">
         <div class="p-md-5 d-flex flex-column col-lg-8 justify-content-center" style="">
           <h1 class="bg-secondary text-center">Pixel Pinball Arcade</h1>
-          <p class="mb-0 bg-primary py-2 px-2" style="">Pixel Pinball Arcade is a 2D pixel art pinball game for Android created in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found below.<br><br>Credits:<br>- Connor Orton (Director, Technical Artist, Games Programmer)<br>- Natalie Smith (Concept Artist, 2D Artist)</p><a class="btn btn-success my-3" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>Download Pixel Pinball Arcade</a>
+          <p class="mb-0 bg-primary py-2 px-2" style="">Pixel Pinball Arcade is a 2D pixel art pinball game for Android developed in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found below.<br><br>Credits:<br>- Connor Orton (Designer, Games Programmer)<br>- Natalie Smith (2D Digital Artist)</p><a class="btn btn-success my-3" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>Download Pixel Pinball Arcade</a>
         </div>
         <div class="col-lg-4" style="">
           <div class="carousel slide" data-ride="carousel" id="carousel_ppa">
@@ -112,8 +112,8 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row" style="">
         <div class="col-lg-8 p-md-5 d-flex flex-column justify-content-center">
-          <h2 class="bg-secondary text-center" style="">Upcoming: 2D Action Sidescroller Horror</h2>
-          <p class="mb-0 bg-primary px-2 py-2">Our next project is a pixel art style 2D Action Horror sidescroller set in a populated city in the modern day. To be released on PC and possibly android.</p>
+          <h2 class="bg-secondary text-center" style="">Project Blight (in development)</h2>
+          <p class="mb-0 bg-primary px-2 py-2">Our next project is a 2D Action Horror sidescroller with a pixel art style set in a populated city in the modern day during a apocalyptic style event. To be released multiplatform.</p>
         </div>
         <div class="col-lg-4 py-4">
           <div id="carousel2" class="carousel slide" data-ride="carousel" data-interval="5000">
