--- a/connororton.html
+++ b/connororton.html
@@ -52,6 +52,15 @@
       </div>
     </div>
   </div>
+  <div class="py-0 pt-3">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="d-flex justify-content-center display-3">Games Programming Portfolio</h1>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="mt-3 pb-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
