--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -14,8 +14,8 @@
 <body style="	background-image: url(assets/FineChapGames/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
-        <p class="navbar-brand mb-0 text-white">
-          <i class="fa d-inline fa-lg fa-stop-circle"></i>Fine Chap Games</p>
+        <img src="assets/FineChapGames/Logo_ZoomedOut_NoBG.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <p class="navbar-brand mb-0 text-white" style=""> Fine Chap Games</p>
       </button>
       <div class="collapse navbar-collapse" id="navbar14">
         <ul class="navbar-nav mr-auto">
@@ -36,18 +36,27 @@
       <div class="row">
         <div class="px-md-5 flex-column d-flex justify-content-center" style="">
           <h1 class="text-center"><b>Natalie Smith</b></h1>
-          <h3 class="text-center"><b>Digital Artist</b></h3>
+          <h3 class="text-center"><b>Digital &amp; Crafts Artist</b></h3>
           <p class="lead text-center mx-3 mb-3">Welcome to my portfolio page. I am a passionate, imaginative and&nbsp;conscientious digital artist and arts and crafts creator. I've always been a creative person my whole life and I want to be employed doing what I love by creating my art passions. I create digital art using the most popular industry standard software and hardware. I enjoy sketching on my graphics tablets often and creating a variety of different 2D artwork ranging from pixel art to seeing line art to completion. I also have knitting and sewing skills alongside non-digital artwork experience and I have plans to sell my creations online. Find my CV and portfolio below.<br></p>
           <div class="row px-2">
-            <div class="col-md-4"><a class="btn text-white d-flex btn-lg align-items-start justify-content-center btn-block my-2" href="https://www.facebook.com/FoxieDJ410" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
-            <div class="col-md-4"><a class="btn text-white my-2 mx-auto btn-lg d-flex justify-content-center" href="https://www.linkedin.com/in/natalie-smith-25940221b/" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
-            <div class="col-md-4"><a class="btn text-white my-2 mx-auto d-flex justify-content-center btn-lg" href="https://twitter.com/missnatsmith19" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
+            <div class="col-md-4"><a class="btn text-white d-flex btn-lg align-items-start justify-content-center btn-block my-2" href="https://www.facebook.com/natsmith1219" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
+            <div class="col-md-4"><a class="btn text-white my-2 mx-auto btn-lg d-flex justify-content-center" href="www.linkedin.com/in/natsmith1219" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
+            <div class="col-md-4"><a class="btn text-white my-2 mx-auto d-flex justify-content-center btn-lg" href="https://twitter.com/natsmith1219" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
           </div>
           <div class="row px-2">
             <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="https://www.deviantart.com/foxydj">Deviant Art Portfolio<br></a></div>
-            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
-            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="https://www.instagram.com/natsmithcrafts/"><i class="fa fa-fw fa-instagram"></i>Knitting &amp; Crafts Portfolio</a></div>
+            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="assets/CV/Natalie Smith CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
+            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="https://www.pinterest.co.uk/natsmith1219"><i class="fa fa-fw fa-pinterest-p"></i>Knitting &amp; Crafts Portfolio</a></div>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="pt-3">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="d-flex justify-content-center display-3">Games Art Portfolio</h1>
         </div>
       </div>
     </div>
