--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
-  <title>Fine Chap Games - Connor Orton</title>
-  <meta name="description" content="Welcome to the portfolio of Connor Orton">
-  <meta name="keywords" content="Connor Orton Indie Game Development Portfolio">
+  <title>Fine Chap Games - Natalie SMith</title>
+  <meta name="description" content="Welcome to the portfolio of Natalie Smith">
+  <meta name="keywords" content="Natalie Smith Indie Game Development Portfolio">
 </head>
 
 <body style="	background-image: url(assets/FineChapGames/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
