--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
-  <title>Fine Chap Games - Natalie SMith</title>
+  <title>Fine Chap Games - Natalie Smith</title>
   <meta name="description" content="Welcome to the portfolio of Natalie Smith">
   <meta name="keywords" content="Natalie Smith Indie Game Development Portfolio">
 </head>
