--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -65,7 +65,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center my-3" style="">Pixel Pinball Arcade</h1>
+          <h1 class="text-center my-3" style="">Pixel Pinball Arcade - 2020 (Unity C#)</h1>
           <p class="px-4 mx-5">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. The game was developed in a team of two which included myself and a 2D artist. This was my second project working in a team of two. My main responsibility was to create the various 2D art assets such as the backgrounds, user interface sprites, game board sprites and so on.</p>
         </div>
       </div>
@@ -84,10 +84,13 @@
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/PPA_Icon_Adaptive_Foreground_sprite.png" width="200"> </div>
-        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Ball_sprite.png" width="200"> </div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/PPA_Icon_Small_Square_sprite.png"> </div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/PPA_Icon_Small_Rounded_sprite.png" width="200"></div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Ball_sprite.png" width="200"></div>
         <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Bumper_Unlit_sprite.png" width="200"></div>
         <div class="col-lg-3 col-md-6 p-3" style=""> <img class="d-block img-fluid mx-auto my-5" src="assets/Portfolio/Natalie/PPA Sprites/Flipper_Unlit_sprite.png" width="200" height="120
-200"></div>
+200"> </div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="d-block img-fluid mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Slingshot_Unlit_sprite.png" width="150" height="200"> </div>
         <div class="col-lg-3 col-md-6 p-3" style=""> <img class="d-block img-fluid mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Plunger_sprite.png" width="100
 125
 
@@ -96,13 +99,10 @@
 100
 50" height="100
 1100
-10"></div>
-        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="d-block img-fluid mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Slingshot_Unlit_sprite.png" width="150" height="200"> </div>
-        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Speed_Boost_Unlit_sprite.png" width="200"> </div>
-        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Whirlwind_Spinner_Inner_sprite.png" width="200"> </div>
-        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Whirlwind_Spinner_Outer_sprite.png" height="200" width="200"> </div>
-        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/PPA_Icon_Small_Square_sprite.png"> </div>
-        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/PPA_Icon_Small_Rounded_sprite.png" width="200"></div>
+10"> </div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Speed_Boost_Unlit_sprite.png" width="200"></div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Whirlwind_Spinner_Outer_sprite.png" height="200" width="200"></div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Whirlwind_Spinner_Inner_sprite.png" width="250" height="200"></div>
         <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/UI_Pause_Button_Unlit_sprite.png" height="200" width="200"></div>
         <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Wormhole_sprite.png" height="200" width="200"> </div>
         <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Wormhole_Green_sprite.png" height="200" width="200"> </div>
