--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -84,7 +84,9 @@
       </div>
       <div class="row pb-3">
         <div class="col-6 p-3 col-md-6"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Medical_Consumables_spritesheet.png"> </div>
-        <div class="col-6 p-3 col-md-6"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Ammo_Items_spritesheet.png"> </div>
+        <div class="col-6 p-3 col-md-6" style="">
+          <div class="row"><img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Ammo_Items_spritesheet.png"><img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Gadget_Items_spritesheet.png"></div>
+        </div>
       </div>
     </div>
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
